[package]
name = "coffeetrove"
version = "0.1.0"
edition = "2021"
authors = ["Arnaud Leroy <dropthehq@gmail.com>"]
description = "Rust client for CoffeeTrove. Access 440K+ cafes, brewing guides, coffee data."
homepage = "https://coffeetrove.com"
repository = "https://github.com/arnaudleroy-studio/coffeetrove-rust"
documentation = "https://coffeetrove.com/knowledge"
license = "MIT"
keywords = ["coffee", "cafes"]
categories = ["data-structures"]
readme = "README.md"
